<resources>
    <!-- Shared Stings -->
    <string name="app_name">Divide Dungeon</string>
    <string name="build">0.1.2 - justin.aul.000@gmail.com</string>
    <string name="exit">Exit</string>
    <string name="inventory">Inventory</string>

    <!--Toolbar Strings-->
    <string name="room">Room: </string>
    <string name="coins">Coins: </string>

    <!--Title Strings-->
    <string name="tokens">"Tokens: "</string>
    <string name="play">PLAY</string>
    <string name="upgrades">UPGRADE SHOP\n</string>

    <!--Inventory Strings-->
    <string name="select_an_item">Select an item</string>
    <string name="weapons">Weapons</string>
    <string name="use">Use</string>
    <string name="sell">Sell</string>

    <!-- Usables Strings-->
    <string name="health_potion">Health Potion</string>
    <string name="health_potion_desc">Will heal 3 health points.</string>
    <string name="apple">Apple</string>
    <string name="apple_desc">Will heal 1 health point.</string>
    <string name="slow_potion">Slow Potion</string>
    <string name="slow_potion_desc">Slow the current enemy\'s attacks by 50%</string>
    <string name="attack_potion">Attack Potion</string>
    <string name="attack_potion_desc">Inflict 50% more damage to the current enemy</string>

    <!-- Transition Strings-->
    <string name="treasure">Treasure</string>
    <string name="shop">Shop</string>
    <string name="fight">Fight</string>
    <string name="select_a_path">Select a Path</string>

    <!-- Problem Generation -->
    <string name="math_type">"Math Type: "</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="maximum_damage">".\nMaximum Damage: "</string>

    <!-- Battle Strings -->
    <string name="rooms_passed">"Rooms passed: "</string>
    <string name="tokens_earned">"Tokens earned: "</string>
    <string name="game_over">Game Over!</string>
    <string name="return_to_title">Return to Title</string>

    <!-- Shop -->
    <string name="shop_welcome">Welcome to my shop!</string>
    <string name="buy">Buy</string>
    <string name="shop_full">Your inventory is full! Please sell something</string>
    <string name="item_sold">Sold! Feel free to buy something else</string>

    <!-- Weapon Window -->
    <string name="weapons_menu_desc">Select a weapon to display their stats</string>

    <!-- Upgrade Shop -->
    <string name="upgrade_shop">Upgrade Shop</string>
    <string name="upgrade_description">Spend your tokens to\nunlock permanent
        upgrades.\nTokens are earned by completing rooms.</string>
    <string name="health_desc">Increase your max\n health by 1</string>
    <string name="coins_desc">Increase the coins \nyou start with by 10</string>
    <string name="damage_desc">Increase your\ndamage by 20%</string>
    <string name="timer_desc">Add 5 seconds to \nenemy attack timers</string>

    <!-- Treasure -->
    <string name="treasure_desc">Tap to open your treasure chest!</string>
    <string name="replace">Replace</string>
    <string name="options">Options</string>
    <string name="clear_data">Clear Data</string>
    <string name="title">Title</string>
    <string name="exit_menu">Exit Menu</string>

    <!-- Options Menu -->


    <!-- Instructions-->
    <string name="instructions">Instructions</string>
    <string name="instruction_text_0">Press the play button to start a new game.
        You may also spend tokens in the shop for permanent upgrades. Tokens are
        earned by getting to higher floors.</string>
    <string name="instruction_text_1">Tap on the answer box and type in the
        answer to any of the questions listed on your weapons. You may also speak
    the answer aloud if you have the mic enabled. The enemy will attack you each
        time the timer reaches 0. You may use items in your inventory to restore
        your health.</string>
    <string name="instruction_text_2">In your inventory, you may use various
        items to help you in combat. Tapping on an item will reveal its use. You
        may then choose to use an item, or sell it later on.</string>
    <string name="instruction_text_3">You may buy consumable items with gold, or
        sell your items by entering your inventory and selecting them. When
        tapping on an item, the shopkeeper will explain its use. Their prices are
        listed beneath the item display.</string>
    <string name="instruction_text_4">When you open a treasure, you will be
        offered a new weapon! The problem type and damage can be compared to the
        weapons in your inventory, and you may decide to swap out a weapon of your
        choosing with the new weapon.
        .</string>
    <string name="next">Next</string>
    <string name="prev">Prev.</string>
</resources>