<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@null">

    <!--Background Image-->
    <ImageView
        android:id="@+id/upgrade_shop_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:importantForAccessibility="no"
        android:src="@drawable/dialog_box"/>

    <LinearLayout
        android:id="@+id/dialog_new_game_root"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_alignTop="@id/upgrade_shop_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/dialog_upgrade_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/upgrade_shop"
            style="@style/button_text"/>

        <TextView
            android:id="@+id/dialog_upgrade_description"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/upgrade_description"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            style="@style/description_text"/>

        <TextView
            android:id="@+id/dialog_upgrade_tokens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            style="@style/description_text_gray"
            android:layout_marginBottom="30dp"
            android:gravity="center"/>

        <GridLayout
            android:id="@+id/dialog_upgrade_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:useDefaultMargins="true"
            android:columnCount="2">
            <RelativeLayout>
                <TextView
                    android:id="@+id/upgrade_max_health_desc"
                    android:text="@string/health_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:layout_centerHorizontal="true"
                    style="@style/text_small"
                    android:gravity="center" />
                <ImageButton
                    android:id="@+id/upgrade_max_health_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@null"
                    android:gravity="center"
                    android:src="@drawable/button_short"
                    android:importantForAccessibility="no"
                    android:layout_below="@id/upgrade_max_health_desc"/>
                <TextView
                    android:id="@+id/upgrade_max_health_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:layout_alignTop="@id/upgrade_max_health_button"
                    android:layout_alignBottom="@id/upgrade_max_health_button"
                    style="@style/button_text"/>
            </RelativeLayout>

            <RelativeLayout>
                <TextView
                    android:id="@+id/upgrade_start_coins_desc"
                    android:text="@string/coins_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:layout_centerHorizontal="true"
                    style="@style/text_small"
                    android:gravity="center" />
                <ImageButton
                    android:id="@+id/upgrade_start_coins_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@null"
                    android:gravity="center"
                    android:src="@drawable/button_short"
                    android:importantForAccessibility="no"
                    android:layout_below="@id/upgrade_start_coins_desc"/>
                <TextView
                    android:id="@+id/upgrade_start_coins_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:layout_alignTop="@id/upgrade_start_coins_button"
                    android:layout_alignBottom="@id/upgrade_start_coins_button"
                    style="@style/button_text"/>
            </RelativeLayout>

            <RelativeLayout>
                <TextView
                    android:id="@+id/upgrade_damage_desc"
                    android:text="@string/damage_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:layout_centerHorizontal="true"
                    style="@style/text_small"
                    android:gravity="center" />
                <ImageButton
                    android:id="@+id/upgrade_damage_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@null"
                    android:gravity="center"
                    android:src="@drawable/button_short"
                    android:importantForAccessibility="no"
                    android:layout_below="@id/upgrade_damage_desc"/>
                <TextView
                    android:id="@+id/upgrade_damage_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:layout_alignTop="@id/upgrade_damage_button"
                    android:layout_alignBottom="@id/upgrade_damage_button"
                    style="@style/button_text"/>
            </RelativeLayout>

            <RelativeLayout>
                <TextView
                    android:id="@+id/upgrade_timer_add_desc"
                    android:text="@string/timer_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:layout_centerHorizontal="true"
                    style="@style/text_small"
                    android:gravity="center" />
                <ImageButton
                    android:id="@+id/upgrade_timer_add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@null"
                    android:gravity="center"
                    android:src="@drawable/button_short"
                    android:importantForAccessibility="no"
                    android:layout_below="@id/upgrade_timer_add_desc"/>
                <TextView
                    android:id="@+id/upgrade_timer_add_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:layout_alignTop="@id/upgrade_timer_add_button"
                    android:layout_alignBottom="@id/upgrade_timer_add_button"
                    style="@style/button_text"/>
            </RelativeLayout>
        </GridLayout>
    </LinearLayout>
    <ImageButton
        android:id="@+id/upgrade_exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@id/upgrade_shop_bg"
        android:layout_marginBottom="80dp"
        android:background="@null"
        android:gravity="center"
        android:src="@drawable/button_short"
        android:importantForAccessibility="no" />
    <TextView
        android:id="@+id/upgrade_exit_text"
        android:text="@string/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_alignTop="@id/upgrade_exit_button"
        android:layout_alignBottom="@id/upgrade_exit_button"
        style="@style/button_text"/>
</RelativeLayout>