<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- ToolBar widget -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/game_black"
                android:minHeight="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <!-- App Name -->
            <TextView
                android:id="@+id/display_name"
                style="@style/description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@+id/toolbar"
                android:layout_marginStart="10dp"
                android:gravity="center"
                tools:ignore="TextContrastCheck" />

            <!-- Stats -->
            <LinearLayout
                android:id="@+id/menu_room_coins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/toolbar"
                android:layout_marginStart="10dp">
                <TextView
                    android:id="@+id/menu_display_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/text_small"
                    android:text="@string/room"
                    />
                <TextView
                    android:id="@+id/menu_display_coins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/text_small"
                    android:text="@string/coins"
                    />
            </LinearLayout>

            <!-- Options Icon -->
            <ImageButton
                android:id="@+id/menu_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/toolbar"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@null"
                app:srcCompat="@drawable/options" />

            <!-- Health Indicator -->
            <LinearLayout
                android:id="@+id/heart_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="9dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/menu_options">

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
    </FrameLayout>

    <!-- Build Number -->
    <TextView
        style="@style/text_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:gravity="center"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>